--- a/package.json
+++ b/package.json
@@ -20,13 +20,24 @@
     "@angular/http": "5.0.0",
     "@angular/platform-browser": "5.0.0",
     "@angular/platform-browser-dynamic": "5.0.0",
+    "@ionic-native/camera": "^4.4.2",
     "@ionic-native/core": "4.3.2",
+    "@ionic-native/facebook": "^4.4.2",
+    "@ionic-native/google-plus": "^4.4.2",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.3",
+    "cordova-android": "6.3.0",
+    "cordova-plugin-camera": "^3.0.0",
+    "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-facebook4": "^1.9.1",
+    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-whitelist": "^1.3.1",
     "firebase": "^4.6.2",
     "ionic-angular": "3.9.2",
+    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
@@ -36,5 +47,22 @@
     "@ionic/app-scripts": "3.1.0",
     "typescript": "2.4.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-camera": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-facebook4": {
+        "APP_ID": "287389468354047",
+        "APP_NAME": "AdotaPet"
+      }
+    },
+    "platforms": [
+      "android"
+    ]
+  }
 }
