--- a/package.json
+++ b/package.json
@@ -24,25 +24,30 @@
     "@ionic-native/core": "4.3.2",
     "@ionic-native/facebook": "^4.4.2",
     "@ionic-native/google-plus": "^4.4.2",
+    "@ionic-native/http": "^4.4.2",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.3",
-    "cordova-android": "6.3.0",
+    "cordova-android": "^6.3.0",
+    "cordova-browser": "~5.0.1",
+    "cordova-plugin-advanced-http": "^1.8.1",
     "cordova-plugin-camera": "^3.0.0",
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-facebook4": "^1.9.1",
+    "cordova-plugin-file": "^5.0.0",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-windows": "~5.0.0",
     "firebase": "^4.6.2",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "phonegap-plugin-push": "^2.1.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18",
-    "cordova-windows": "~5.0.0"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.0",
@@ -60,11 +65,16 @@
       "cordova-plugin-facebook4": {
         "APP_ID": "287389468354047",
         "APP_NAME": "AdotaPet"
-      }
+      },
+      "phonegap-plugin-push": {
+        "FCM_VERSION": "11.0.1"
+      },
+      "cordova-plugin-advanced-http": {}
     },
     "platforms": [
-      "android",
-      "windows"
+      "windows",
+      "browser",
+      "android"
     ]
   }
 }
