--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "@ionic-native/core": "4.3.2",
     "@ionic-native/facebook": "^4.4.2",
     "@ionic-native/fcm": "^4.4.2",
-    "@ionic-native/google-analytics": "^4.4.2",
+    "@ionic-native/google-analytics": "^4.5.2",
     "@ionic-native/google-plus": "^4.4.2",
     "@ionic-native/http": "^4.4.2",
+    "@ionic-native/onesignal": "^4.5.2",
     "@ionic-native/push": "^4.4.2",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
@@ -36,9 +37,9 @@
     "cordova-browser": "~5.0.1",
     "cordova-plugin-advanced-http": "^1.8.1",
     "cordova-plugin-camera": "^3.0.0",
+    "cordova-plugin-crosswalk-webview": "^2.3.0",
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-facebook4": "^1.9.1",
-    "cordova-plugin-fcm": "^2.1.2",
     "cordova-plugin-file": "^5.0.0",
     "cordova-plugin-google-analytics": "^1.8.3",
     "cordova-plugin-ionic-webview": "^1.1.16",
@@ -49,7 +50,7 @@
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
-    "phonegap-plugin-push": "^2.1.0",
+    "onesignal-cordova-plugin": "^2.2.4",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
@@ -71,12 +72,10 @@
         "APP_ID": "287389468354047",
         "APP_NAME": "AdotaPet"
       },
-      "phonegap-plugin-push": {
-        "FCM_VERSION": "11.0.1"
-      },
       "cordova-plugin-advanced-http": {},
-      "cordova-plugin-fcm": {},
-      "cordova-plugin-google-analytics": {}
+      "cordova-plugin-google-analytics": {},
+      "cordova-plugin-crosswalk-webview": {},
+      "onesignal-cordova-plugin": {}
     },
     "platforms": [
       "windows",
