--- a/package.json
+++ b/package.json
@@ -24,29 +24,28 @@
     "@ionic-native/core": "4.3.2",
     "@ionic-native/facebook": "^4.4.2",
     "@ionic-native/fcm": "^4.4.2",
-    "@ionic-native/google-analytics": "^4.5.2",
     "@ionic-native/google-plus": "^4.4.2",
     "@ionic-native/http": "^4.4.2",
     "@ionic-native/onesignal": "^4.5.2",
     "@ionic-native/push": "^4.4.2",
+    "@ionic-native/social-sharing": "^4.7.0",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.1.3",
-    "angularfire2": "^5.0.0-rc.3",
+    "android-versions": "^1.3.0",
+    "angularfire2": "^5.0.0-rc.6",
     "cordova-android": "^6.3.0",
     "cordova-browser": "~5.0.1",
     "cordova-plugin-advanced-http": "^1.8.1",
     "cordova-plugin-camera": "^3.0.0",
-    "cordova-plugin-crosswalk-webview": "^2.3.0",
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-facebook4": "^1.9.1",
     "cordova-plugin-file": "^5.0.0",
-    "cordova-plugin-google-analytics": "^1.8.3",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-windows": "~5.0.0",
-    "firebase": "^4.6.2",
+    "firebase": "^5.0.4",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
@@ -73,8 +72,6 @@
         "APP_NAME": "AdotaPet"
       },
       "cordova-plugin-advanced-http": {},
-      "cordova-plugin-google-analytics": {},
-      "cordova-plugin-crosswalk-webview": {},
       "onesignal-cordova-plugin": {}
     },
     "platforms": [
