--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "@angular/http": "5.0.0",
     "@angular/platform-browser": "5.0.0",
     "@angular/platform-browser-dynamic": "5.0.0",
+    "@ionic-native/android-permissions": "^4.12.0",
     "@ionic-native/camera": "^4.4.2",
-    "@ionic-native/core": "4.3.2",
+    "@ionic-native/core": "^4.11.0",
     "@ionic-native/facebook": "^4.4.2",
     "@ionic-native/fcm": "^4.4.2",
     "@ionic-native/geolocation": "^4.8.0",
@@ -35,32 +36,34 @@
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.1.3",
     "android-versions": "^1.3.0",
-    "angularfire2": "^5.0.0-rc.6",
-    "cordova-android": "^6.3.0",
+    "angularfire2": "5.0.0-rc.6.0",
+    "cordova-android": "6.4.0",
     "cordova-browser": "5.0.3",
-    "cordova-plugin-advanced-http": "^1.8.1",
+    "cordova-plugin-advanced-http": "^1.11.1",
+    "cordova-plugin-android-permissions": "^1.0.0",
     "cordova-plugin-camera": "^3.0.0",
     "cordova-plugin-device": "^1.1.7",
-    "cordova-plugin-facebook4": "^1.9.1",
-    "cordova-plugin-file": "^5.0.0",
+    "cordova-plugin-facebook4": "^1.10.1",
+    "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-firebase": "^1.0.5",
     "cordova-plugin-geolocation": "^4.0.1",
-    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-network-information": "^2.0.1",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-windows": "^5.0.0",
-    "firebase": "^5.0.4",
+    "firebase": "4.12.1",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
-    "onesignal-cordova-plugin": "^2.2.4",
-    "rxjs": "5.5.2",
+    "onesignal-cordova-plugin": "^2.4.1",
+    "rxjs": "5.5.4",
+    "rxjs-compat": "^6.2.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.0",
+    "@ionic/app-scripts": "3.1.11",
     "typescript": "2.4.2"
   },
   "description": "An Ionic project",
@@ -82,7 +85,8 @@
       "cordova-plugin-network-information": {},
       "cordova-plugin-geolocation": {
         "GEOLOCATION_USAGE_DESCRIPTION": "To locate you"
-      }
+      },
+      "cordova-plugin-android-permissions": {}
     },
     "platforms": [
       "windows",
