--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.1.3",
+    "@ngx-translate/core": "^9.1.1",
+    "@ngx-translate/http-loader": "^3.0.1",
     "android-versions": "^1.3.0",
     "angularfire2": "5.0.0-rc.6.0",
     "cordova-android": "6.4.0",
